# bobo

./: .bumpversion.cfg  .gitignore  README.md  bobo.py  bookdog.py  convert.py  easing.py  new_idea.py  pyproject.toml  requirements.txt  tasks.py
bookdog/: __init__.py  __main__.py  database.py  main.py  model.py  views.py
