# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookdog"
version = "1.0.0"
description = "Keep a database of books you read"
readme = "README.md"
authors = [{ name = "Jim Anderson", email = "jima80525@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["books", "database"]
dependencies = [
    'PyQt5 >= 5.15.7',
    'PyQt5-Qt5 >= 5.15.2',
    'PyQt5-sip >= 12.11.0',
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", 'bump2version >= 1.0.1', 'bumpversion >= 0.6.0', 'invoke >= 1.7.3']

[project.urls]
Homepage = "https://github.com/jima80525/bookdog"

[project.scripts]
bookdog = "bookdog.main:main"
